# todo-backend

./: .gitignore  pyproject.toml
tests/: TodoPactHelper.py  test_pacts.py
todo_backend/: Todo.py  TodoRepository.py  __main__.py  api.py
todo_backend/models/: AddTodoRequest.py  MetaInfo.py  Task.py  Todo.py  __init__.py
todo_backend/repository/: MetaInfoRepository.py  TodoMongoRepository.py  __init__.py
todo_backend/routes/: __init__.py  routes.py
todo_backend/service/: TodoService.py  __init__.py
