[tool.poetry]
name = "todo-backend"
version = "0.1.0"
description = ""
authors = ["Rishabh Sharma <99526730+sharma-rishabh@users.noreply.github.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
